<resources>
    <string name="app_name">Driboard</string>
    <string name="login">Login With Dribbble</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- user profile -->
    <string name="shots">Shots</string>
    <string name="twitter">Twitter</string>
    <string name="username">Name</string>



    <!-- shot edit -->
    <string name="image">Image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="tags">Tags</string>
    <string name="publish">Publish</string>
    <string name="save">Save</string>
    <string name="website">Website</string>
    <string name="dribbble">Dribbble</string>
    <string name="bio">Bio</string>
    <string name="address">Address</string>
    <string name="followers">Followers</string>



    <string name="title_input_hint">Add a title</string>
    <string name="description_input_hint">Add a description</string>
    <string name="tags_input_hint">Add a tag</string>
    <string name="img_upload_hint">Upload your image</string>

    <string name="select_ur_image">Select your image</string>

    <string name="image_is_required">Image is required</string>
    <string name="title_is_required">Title is required</string>

    <string name="error_message">Error</string>
    <string name="update">Update</string>

    <string name="channel_name">Reminder</string>
    <string name="channel_description">Drafts reminder</string>
    <string name="biography">Biography</string>

</resources>
