<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ShotEditFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvImageLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginBottom="@dimen/margin_8"

                android:fontFamily="sans-serif-medium"
                android:text="@string/image"
                android:textSize="@dimen/label_text_size" />

            <ImageView
                android:id="@+id/ivPreview"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:scaleType="centerCrop"
                android:src="@drawable/image_placeholder"
                android:contentDescription="@string/img_upload_hint" />

            <TextView
                android:id="@+id/tvTitleLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginBottom="@dimen/margin_8"
                android:fontFamily="sans-serif-medium"
                android:text="@string/title"
                android:textSize="@dimen/label_text_size" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/TitleMaterialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="8dp"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    app:counterEnabled="true"
                    app:counterMaxLength="50">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/title_input_hint"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:textSize="@dimen/input_text_size" />

                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginBottom="@dimen/margin_8"
                android:fontFamily="sans-serif-medium"
                android:text="@string/description"
                android:textSize="@dimen/label_text_size" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/DescriptionMaterialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="8dp"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    app:counterEnabled="true"
                    app:counterMaxLength="160">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description_input_hint"
                        android:inputType="textMultiLine"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvTagsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginBottom="@dimen/margin_8"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tags"
                android:textSize="@dimen/label_text_size" />
            <HorizontalScrollView
                android:id="@+id/chipGroupHorizontalView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"

                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/TagsMaterialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="8dp"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tags_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:gravity="center"
                android:imeOptions="actionDone"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tags_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/tags_input_hint"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_4">

                <Button
                    android:id="@+id/btPublish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/publish_btn_margin_end"
                    android:text="@string/publish"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>